package cn.shui.learning_plan.offerII.model;

/**
 * @author shui.
 * @date 2021/12/10.
 * @time 23:44.
 */
public class Node {
    public int val;
    public Node prev;
    public Node next;
    public Node child;
}
