@startuml

title __MODEL's Class Diagram__\n

  namespace cn.shui.learning_plan.offerII {
    namespace model {
      class cn.shui.learning_plan.offerII.model.ListNode {
          + val : int
          + ListNode()
          + ListNode()
          + ListNode()
      }
    }
  }
  

  namespace cn.shui.learning_plan.offerII {
    namespace model {
      class cn.shui.learning_plan.offerII.model.Node {
          + val : int
      }
    }
  }
  

  namespace cn.shui.learning_plan.offerII {
    namespace model {
      class cn.shui.learning_plan.offerII.model.Node1 {
          + val : int
          + Node1()
          + Node1()
          + Node1()
      }
    }
  }
  

  namespace cn.shui.learning_plan.offerII {
    namespace model {
      class cn.shui.learning_plan.offerII.model.TreeNode {
          + val : int
          + TreeNode()
          + TreeNode()
          + TreeNode()
      }
    }
  }
  

  cn.shui.learning_plan.offerII.model.ListNode o-- cn.shui.learning_plan.offerII.model.ListNode : next
  cn.shui.learning_plan.offerII.model.Node o-- cn.shui.learning_plan.offerII.model.Node : child
  cn.shui.learning_plan.offerII.model.Node o-- cn.shui.learning_plan.offerII.model.Node : next
  cn.shui.learning_plan.offerII.model.Node o-- cn.shui.learning_plan.offerII.model.Node : prev
  cn.shui.learning_plan.offerII.model.Node1 o-- cn.shui.learning_plan.offerII.model.Node1 : next
  cn.shui.learning_plan.offerII.model.TreeNode o-- cn.shui.learning_plan.offerII.model.TreeNode : left
  cn.shui.learning_plan.offerII.model.TreeNode o-- cn.shui.learning_plan.offerII.model.TreeNode : right


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
